--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.application.name=GeofencingServer
+server.port=8080
+server.servlet.context-path=/geofencing
 
+#Database details
+spring.datasource.url=jdbc:mysql://localhost:3306/geofencing_db
+spring.datasource.username=root
+spring.datasource.password=root
+
+#IPINFO Properties
+ipinfo.token=6dd48b166218ce
+ipinfo.url=https://ipinfo.io
