--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.servlet.context-path=/geofencing
 
 #Database details
 spring.datasource.url=jdbc:mysql://localhost:3306/geofencing_db
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=DB_USERNAME
+spring.datasource.password=DB_PASSWORD
 
 #IPINFO Properties
-ipinfo.token=6dd48b166218ce
+ipinfo.token=IPINFO_TOKEN
 ipinfo.url=https://ipinfo.io
